# mtg_fine_tuned

./: Cargo.toml  requirements.txt
src/: download_art.rs  filter_oracle_cards.rs  gen_training_data.rs  generate_image.rs  resize_art.rs  shared.rs
src/shared/: models.rs  neural_net.rs
